<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".view.activity.BusinessRegisterActivity">

    <!--地址-->
    <EditText
        android:id="@+id/et_register_business_address"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="16dp"
        android:hint="@string/address_hint"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

<!--密码-->
    <EditText
        android:id="@+id/et_register_business_password"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_business_address"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />
<!--再一次密码-->
    <EditText
        android:id="@+id/et_register_business_re_password"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_business_password"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="16dp"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />
    <!--最大座位-->
    <EditText
        android:id="@+id/et_register_business_max_seats"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_business_re_password"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:hint="@string/max_seats"
        android:inputType="number"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <!--其他-->
    <EditText
        android:id="@+id/et_register_business_other"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_business_max_seats"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawableLeft="@drawable/ic_other"
        android:drawablePadding="16dp"
        android:hint="@string/et_register_business_other"
        android:maxLines="3"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/bt_register_business"
        style="@style/Font_family_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_business_other"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dip"
        android:layout_marginRight="16dp"
        android:background="@drawable/text_bg"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>