<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".view.activity.BusinessChangePasswordActivity">

    <EditText
        android:id="@+id/et_change_business_address"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawablePadding="16dp"
        android:hint="@string/address_hint"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_change_business_password"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_change_business_address"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawablePadding="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_change_business_repassword"
        style="@style/Font_family_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_change_business_password"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_style"
        android:drawablePadding="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_business_change"
        style="@style/Font_family_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeClick"
        android:layout_below="@+id/et_change_business_repassword"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dip"
        android:layout_marginRight="16dp"
        android:background="@drawable/text_bg"
        android:text="@string/change_password"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>